--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </nav>
     </header>
-    <section id="Profile">
+    <section id="Profile" class="Profile">
         <div class="Section_Picture">
             <img src="./Assets/Sujoy_Sadhukhan.png" class="Section_Picture_Edit" alt="Sujoy">
         </div>
@@ -75,7 +75,45 @@
             </div>
         </div>
     </section>
+    <section id="About" class="About">
+        <p class="About_Text_P1">
+            Get to know more
+        </p>
+        <h1 class="About_Title">
+            About me
+        </h1>
+        <div class="Section_Container">
+            <div class="Section_image-Container">
+                <img src="./Assets/About_Image.jpg" alt="Profile Picture" class="About-Image">
+            </div>
+            <div class="About-Details-Container">
+                <div class="About-Container">
+                    <div class="Details-Container">
+                        <img src="./Assets/experience_icon.png" alt="Experience Icon" class="Icon">
+                        <br>
+                        <h3>
+                            Experience
+                        </h3>
+                        <p>Now Studying at college <br>without any professional experience</p>
+                        <br>
+                    </div>
+                    <div class="Details-Container">
+                        <img src="./Assets/education_icon.png" alt="Education Icon" class="Icon">
+                        <br>
+                        <h3>
+                            Education
+                        </h3>
+                        <p>Bachelor of Computer Application (ongoing) <br> Frontend Developer</p>
+                        <br>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="script.js"></script>
 </body>
 </html>
+<!--<button class="Btn Btn_Colour-2" onclick="window.open('./Assets/Resume_Sujoy.pdf')">
+    Download Resume
+</button> -->
