--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <img src="./Assets/Sujoy_Sadhukhan.png" class="home_page_picture_edit" alt="Sujoy">
         </div>
         <div class="home_page_text">
-            <p class="home_page_text_P1">
+            <p class="home_page_text_p1">
                 Hello I'm
             </p>
             <svg class="sign" width="460" height="460" viewBox="0 0 481 460" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -79,7 +79,7 @@
             <h1 class="home_page_name">
                 Sujoy
             </h1>
-            <p class="home_page_text_P2">
+            <p class="home_page_text_p2">
                 A Professional Gamer and Frontend Developer
             </p>
             <div id="home_page_social_container">
@@ -108,11 +108,11 @@
         </h1>
         <div class="about_page_section_container">
             <div class="about_page_section_image_container">
-                <img src="./Assets/About_Image.jpg" alt="Profile Picture" class="about_page-image">
+                <img src="./Assets/About_Image.jpg" alt="Profile Picture" class="about_page_image">
             </div>
             <div class="about_page_details_container">
-                <div class="about-container">
-                    <div class="details-container">
+                <div class="about_container">
+                    <div class="details_container">
                         <img src="./Assets/experience_icon.png" alt="Experience Icon" class="icon">
                         <br>
                         <h3>
@@ -121,13 +121,15 @@
                         <p>Now Studying at college <br>without any professional experience</p>
                         <br>
                     </div>
-                    <div class="details-container">
+                    <div class="details_container">
                         <img src="./Assets/education_icon.png" alt="Education Icon" class="icon">
                         <br>
                         <h3>
                             Education
                         </h3>
-                        <p>Bachelor of Computer Application (ongoing) <br> Frontend Developer</p>
+                        <p>
+                            Bachelor of Computer Application (ongoing) <br> Frontend Developer
+                        </p>
                         <br>
                     </div>
                 </div>
