--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <div>
                 <ul class="nav_links">
                     <li>
-                        <a href="#hOME" class="link_1">HOME</a>
+                        <a href="#home_page" class="link_1">HOME</a>
                     </li>
                     <li>
-                        <a href="#aBOUT" class="links">ABOUT</a>
+                        <a href="#about_page" class="links">ABOUT</a>
                     </li>
                     <li>
-                        <a href="#iNSIGHTS" class="links">INSIGHTS</a>
+                        <a href="#insights" class="links">INSIGHTS</a>
                     </li>
                     <li>
                         <a href="#pRECEPTORS" class="links">PRECEPTORS</a>
@@ -47,10 +47,10 @@
                 </div>
                 <div class="manu_links">
                     <li>
-                        <a href="#hOME" class="links" onclick="toggleMenu()">HOME</a>
+                        <a href="#home_page" class="links" onclick="toggleMenu()">HOME</a>
                     </li>
                     <li>
-                        <a href="#aBOUT" class="links" onclick="toggleMenu()">ABOUT</a>
+                        <a href="#about_page" class="links" onclick="toggleMenu()">ABOUT</a>
                     </li>
                     <li>
                         <a href="#iNSIGHTS" class="links" onclick="toggleMenu()">INSIGHTS</a>
@@ -133,8 +133,14 @@
                         <br>
                     </div>
                 </div>
+                <div class="text_container">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus sint minima illo ullam tempore nam temporibus facere beatae, sequi molestiae eaque necessitatibus unde fuga delectus aut saepe sapiente, quibusdam vero excepturi. Molestiae consectetur corporis doloremque aut expedita eaque sequi, eos saepe rerum laudantium minima, corrupti explicabo ratione placeat alias praesentium.
+                    </p>
+                </div>
             </div>
         </div>
+        <img src="./Assets/Next_Button.png" alt="Next" class="next_button" onclick="location.href='./#insights'">
     </section>
 
     <script src="script.js"></script>
