--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p class="footer-text">© 2025 Sujoy Sadhukhan Portfolio. All Rights Reserved.</p>
+            <p class="footer-text">© 2025 Sujoy Sadhukhan Portfolio. All Rights Reserved. Thanks For Visiting.</p>
         </div>
     </footer>
 
