--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                         <h3 class="projects-title">Computer Architecture</h3>
                         <p class="projects-category">College Projects</p>
                         <div class="projects-btns">
-                            <a onclick="window.open('CA.html')" class="projects-btn">
+                            <a onclick="window.open('https://alphenjo-collegeproject.netlify.app/')" class="projects-btn">
                                 <i class="fas fa-link"></i>
                             </a>
                             <a href="https://www.coursera.org/learn/comparch" class="projects-btn">
